--- a/style.css
+++ b/style.css
@@ -1,4 +1,49 @@
+body {
+  margin: 0;
+}
+
 #cont {
   display: flex;
+  padding-top: 300px;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100vh;
+  background-color: red;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-x: scroll;
+}
+
+.speaker-1 {
+  width: 500px;
+  box-sizing: border-box;
+  height: auto;
+  background-color: blanchedalmond;
+  margin-bottom: 20px;
+}
+
+.speaker-2 {
+  width: 500px;
+  margin-left: 50px;
+  height: auto;
+  background-color: blue;
+  margin-bottom: 20px;
+}
+
+.sound-cont {
+  text-align: center;
+  background: #544b3e;
+  height: auto;
+  padding: 10px;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.text-cont {
+  text-align: center;
+}
+
+.prompt-cont {
+  text-align: center;
 }
