--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 #cont {
   display: flex;
-  padding-top: 300px;
+  padding-top: 200px;
   box-sizing: border-box;
   width: 100%;
   height: 100vh;
@@ -21,6 +21,10 @@ body {
   height: auto;
   background-color: blanchedalmond;
   margin-bottom: 20px;
+}
+
+.speaker-1:first-child {
+  margin-top: 500px;
 }
 
 .speaker-2 {
@@ -41,9 +45,26 @@ body {
 }
 
 .text-cont {
+  min-width: 300px;
+  margin: 0 auto;
+  min-height: 60px;
+  margin-top: 30px;
+  background: #544b3e;
+  justify-content: center;
   text-align: center;
+  display: flex;
 }
 
 .prompt-cont {
   text-align: center;
+}
+
+.text {
+  display: none;
+  text-align: center;
+}
+
+.show {
+  display: block;
+  flex-direction: column;
 }
