--- a/style.css
+++ b/style.css
@@ -8,7 +8,14 @@ body {
   box-sizing: border-box;
   width: 100%;
   height: 100vh;
-  background-color: red;
+  background-color: #a7a7a7;
+  background-image: repeating-linear-gradient(
+    -45deg,
+    transparent,
+    transparent 50%,
+    #f0ecdb 50%,
+    #f0ecdb
+  );
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -17,27 +24,66 @@ body {
 
 .speaker-1 {
   width: 500px;
+  position: relative;
   box-sizing: border-box;
   height: auto;
-  background-color: blanchedalmond;
   margin-bottom: 20px;
+  background: #00aabb;
+  border-radius: 10px;
+  -webkit-box-shadow: 10px 7px 24px -12px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 7px 24px -12px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 7px 24px -12px rgba(0, 0, 0, 0.75);
+}
+
+.speaker-1:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 61px solid transparent;
+  border-right-color: #00aabb;
+  border-left: 0;
+  border-bottom: 0;
+  margin-top: -30.5px;
+  margin-left: -61px;
 }
 
 .speaker-1:first-child {
-  margin-top: 500px;
+  margin-top: 700px;
 }
 
 .speaker-2 {
   width: 500px;
+  position: relative;
+  background: #00aabb;
   margin-left: 50px;
+  border-radius: 10px;
+  -webkit-box-shadow: 10px 7px 24px -12px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 7px 24px -12px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 7px 24px -12px rgba(0, 0, 0, 0.75);
   height: auto;
-  background-color: blue;
   margin-bottom: 20px;
+}
+
+.speaker-2:after {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 61px solid transparent;
+  border-left-color: #00aabb;
+  border-right: 0;
+  border-bottom: 0;
+  margin-top: -30.5px;
+  margin-right: -61px;
 }
 
 .sound-cont {
   text-align: center;
-  background: #544b3e;
   height: auto;
   padding: 10px;
   box-sizing: border-box;
@@ -45,18 +91,27 @@ body {
 }
 
 .text-cont {
-  min-width: 300px;
+  width: 300px;
   margin: 0 auto;
   min-height: 60px;
   margin-top: 30px;
-  background: #544b3e;
   justify-content: center;
   text-align: center;
   display: flex;
+  background-color: #c5cae9;
+  -webkit-box-shadow: 0px 15px 10px -8px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 15px 10px -8px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 15px 10px -8px rgba(0, 0, 0, 0.75);
 }
 
 .prompt-cont {
   text-align: center;
+}
+
+.toggle-text {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .text {
