--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
 body {
   margin: 0;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: 'Open Sans';
+  line-height: 1.618em;
+  background: #2c3e50;
 }
 
 #cont {
   display: flex;
-  padding-top: 200px;
+  padding-top: 400px;
   box-sizing: border-box;
   width: 100%;
   height: 100vh;
@@ -57,8 +67,7 @@ body {
 .speaker-2 {
   width: 500px;
   position: relative;
-  background: #00aabb;
-  margin-left: 50px;
+  background: #81c784;
   border-radius: 10px;
   -webkit-box-shadow: 10px 7px 24px -12px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 7px 24px -12px rgba(0, 0, 0, 0.75);
@@ -75,7 +84,7 @@ body {
   width: 0;
   height: 0;
   border: 61px solid transparent;
-  border-left-color: #00aabb;
+  border-left-color: #81c784;
   border-right: 0;
   border-bottom: 0;
   margin-top: -30.5px;
@@ -88,6 +97,10 @@ body {
   padding: 10px;
   box-sizing: border-box;
   width: 100%;
+}
+
+.text-cont-greenish {
+  background: #a5d6a7 !important;
 }
 
 .text-cont {
@@ -106,6 +119,14 @@ body {
 
 .prompt-cont {
   text-align: center;
+  width: 80%;
+  margin: 25px auto;
+}
+
+.prompt {
+  color: #004d40;
+  font-family: 'Exo', sans-serif;
+  text-transform: uppercase;
 }
 
 .toggle-text {
@@ -117,9 +138,71 @@ body {
 .text {
   display: none;
   text-align: center;
+  font-family: 'Exo', sans-serif;
+  font-weight: 500;
+  color: #004d40;
+  font-size: 16px;
 }
 
 .show {
   display: block;
   flex-direction: column;
+}
+
+/*
+Style button
+*/
+
+button {
+  font-size: 1.2em;
+  background: #3498db;
+  color: #fff;
+  border: 0.25rem solid #3498db;
+  padding: 0.2em 0.3em;
+  margin: 1rem;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+
+button:hover {
+  color: #3498db;
+}
+
+button::after {
+  content: '';
+  background: #ecf0f1;
+  position: absolute;
+  z-index: -1;
+  padding: 0.2em 0.3em;
+  display: block;
+}
+
+button[class^='slide']::after {
+  transition: all 0.35s;
+}
+button[class^='slide']:hover::after {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transition: all 0.35s;
+}
+
+button[class^='grow']::after {
+  transition: all 0.3s ease;
+}
+button[class^='grow']:hover::after {
+  transition: all 0.3s ease-out;
+}
+
+button.grow_box::after {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transform: scale(0, 0);
+}
+button.grow_box:hover::after {
+  transform: scale(1, 1);
 }
