--- a/style.css
+++ b/style.css
@@ -7,17 +7,16 @@ body {
   box-sizing: border-box;
 }
 body {
-  font-family: 'Open Sans';
   line-height: 1.618em;
   background: #2c3e50;
 }
 
 #cont {
   display: flex;
-  padding-top: 400px;
   box-sizing: border-box;
+  position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: #a7a7a7;
   background-image: repeating-linear-gradient(
     -45deg,
@@ -107,9 +106,9 @@ body {
   width: 300px;
   margin: 0 auto;
   min-height: 60px;
+  padding: 5px;
   margin-top: 30px;
   justify-content: center;
-  text-align: center;
   display: flex;
   background-color: #c5cae9;
   -webkit-box-shadow: 0px 15px 10px -8px rgba(0, 0, 0, 0.75);
@@ -163,6 +162,9 @@ button {
   position: relative;
   z-index: 1;
   overflow: hidden;
+  -webkit-box-shadow: 2px 11px 5px -10px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 2px 11px 5px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 2px 11px 5px -10px rgba(0, 0, 0, 0.75);
 }
 
 button:hover {
@@ -205,4 +207,92 @@ button.grow_box::after {
 }
 button.grow_box:hover::after {
   transform: scale(1, 1);
+}
+
+/* Ratings */
+
+.ratings {
+  display: inline-flex;
+  flex-direction: row-reverse;
+  margin-bottom: 7px;
+  margin-left: 7px;
+}
+
+.ratings input {
+  position: relative;
+  z-index: 1;
+  margin-top: -6px;
+  margin-left: -12px;
+}
+
+.ratings label {
+  width: 20px;
+  height: 20px;
+  margin: 0 5px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background: #fff;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  transition: all 0.1s linear;
+  cursor: pointer;
+}
+
+input[type='radio'] {
+  display: none;
+}
+
+.ratings label:hover,
+.rating label:hover ~ label {
+  background: #aaa;
+}
+
+.ratings input:checked ~ label {
+  background: #fc5;
+}
+
+/* Tooltip */
+
+.tooltip {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 30px;
+  right: 30px;
+  z-index: 10;
+}
+
+.tooltip:hover .tip {
+  opacity: 1;
+  visibility: visible;
+  margin-left: 0.5rem;
+  transition: all 0.35s;
+}
+.tip {
+  opacity: 0;
+  visibility: hidden;
+  display: block;
+  white-space: nowrap;
+  position: absolute;
+  z-index: 1;
+  left: 100%;
+  bottom: 50%;
+  padding: 1em;
+  margin-left: 0;
+  margin-top: 0.5rem;
+  font-size: 0.8em;
+  font-weight: normal;
+  background: #34495e;
+  border-radius: 1em;
+  color: #fff;
+  transition: all 0.35s;
+}
+.tip::before {
+  content: '';
+  border-style: solid;
+  border-width: 0.5rem 0.625rem 0.5rem 0;
+  border-color: transparent #34495e transparent transparent;
+  position: absolute;
+  right: 100%;
+  bottom: calc(50% - 0.5rem);
+  width: 0;
+  height: 0;
 }
